css/style.css
/* ... */
        #hero .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
            bottom: var(--swiper-pagination-bottom, 30px);
        }

        /* --- 좌우 화살표 커스텀 --- */
        #hero .mySwiper .swiper-button-next,
        #hero .mySwiper .swiper-button-prev {
            top: 50%; transform: translateY(-50%);
            color: #fff;
        }

        /* 화살표 위치 세부 조정 */
        #hero .mySwiper .swiper-button-next {
            right: 3.64vw;
            width: 60px; height: 60px; background: url('../images/hero_arrow_right.svg') no-repeat center; background-size: contain;
        }
        #hero .mySwiper .swiper-button-prev {
            left: 3.64vw;
            width: 60px; height: 60px; background: url('../images/hero_arrow_left.svg') no-repeat center; background-size: contain;
        }

        /* 기존 화살표 없애기 */
        .mySwiper .swiper-navigation-icon {
            display: none;
        }

        #hero .swiper-slide > span {
            position: absolute; top: 50%; left: 195px; transform: translateY(-50%);
            width: 535px;
        }
        #hero .swiper-slide > span p {
            color: #fff;
        }
        #hero .swiper-slide > span p:first-child {
            font-size: 4rem; font-weight: 600; line-height: 140%;
        }
        #hero .swiper-slide > span p:last-child {
            font-size: 1.8rem; line-height: 160%; margin-top: 25px;
        }


#section1 {
}
#section1 .container {
}
    #section1 .container .productList {
        display: grid; grid-template-columns: repeat(3, 1fr); gap: 21px 19px;
        list-style: none; padding: 0; margin: 0;
    }
    #section1 .container .productList > li {
        width: 25.7vw; overflow: hidden; border: 1px solid var(--maincolor1); box-sizing: border-box; transition: .3s;
    }
    #section1 .container .productList > li:hover {
        transform: translateY(-15px);
    }

    /* border radius 조절을 위한 영역 */
    #section1 .container .productList > li:first-child,
    #section1 .container .productList > li:nth-child(3) {
        border-radius: 20px 20px 0 0;
    }
    #section1 .container .productList > li:nth-child(2) {
        border-radius: 0px; border: 1px solid var(--maincolor1); border-left: none; border-right: none;
    }
    #section1 .container .productList > li:nth-child(4),
    #section1 .container .productList > li:last-child {
        border-radius: 20px;
    }
    #section1 .container .productList > li:nth-child(5) {
        border-radius: 0 0 20px 20px;
    }
    
    #section1 .container .productList li a {
        display: block;
        height: 100%; text-decoration: none; color: inherit;
    }
        #section1 .container .productList li a .productImg {
            position: relative;
            display: flex; justify-content: center; align-items: center;
            width: 100%; height: 280px; margin-top: 20px;
        }
        #section1 .container .productList li a .textBox {
            position: relative;
            height: 100%; padding: 40px 2.6vw; background: #ffffff; transition: background 0.2s;
        }
            #section1 .container .productList li a .textBox strong {
                display: block;
                font-size: 2.2rem; font-weight: 700; color: var(--text); margin-bottom: 15px;
            }
            #section1 .container .productList li a .textBox strong::before {
                content: "";
                position: absolute; top: 25px; left: 2.6vw;
                width: 20px; height: 3px; background: var(--maincolor1);
            }
            #section1 .container .productList li a .textBox p {
                font-size: 1.6rem; line-height: 2; font-weight: 500; color: #333; margin-bottom: 20px;
            }
            #section1 .container .productList li a .textBox .productTag {
                display: flex; gap: 10px; justify-content: center;
            }
                #section1 .container .productList li a .textBox .productTag li {
                    width: 4.63vw; height: 100%; font-size: 1.5rem; font-weight: 600; color: var(--text); background: #EFEFEF; padding: 5px 0px; border-radius: 10px; transition: .3s; text-align: center;
                }

        /* 두 번째 li */
        #section1 .container .productList > li:nth-child(2) {
            display: flex; justify-content: space-between; align-items: center; flex-direction: column;
            background: #F8F8F8;
        }

        /* Hover 효과 */
        #section1 .container .productList > li:hover .textBox {
            background: var(--maincolor1);
        }
        #section1 .container .productList > li:hover .textBox strong {
            color: #ffffff;
        }
        #section1 .container .productList > li:hover .textBox p {
            color: #ffffff;
        }
        #section1 .container .productList li:hover a .textBox strong::before {
            background: #fff;
        }
        #section1 .container .productList li:hover a .textBox .productTag li {
            background: #fff;
        }


#section2 {
    
}
#section2 .container .h2bg_left,
#section2 .container .h2bg_right {
    top: 7px;
}
#section2 .container .btn_more {
    display: flex; justify-content: center; align-items: center;
    max-width: 182px; padding: 15px 0px; font-weight: 500; font-size: 2.4rem; background: var(--maincolor1); border-radius: 15px; color: #fff; margin: 0 auto; margin-top: 42px; transition: .2s;
}
#section2 .container .sec2_contentBox {
    display: grid; grid-template-columns: repeat(3, 25.4vw); gap: 20px; justify-content: center;
    margin: 30px auto 0;
}
    #section2 .container .sec2_contentBox .content_wrap {
        display: flex; justify-content: center; align-items: center;
        height: 600px; border-radius: 30px; transition: .2s;
    }
/* ... */

